--- a/style.css
+++ b/style.css
@@ -254,10 +254,11 @@ canvas {
   align-items: center;
   justify-content: center;
   z-index: 30;
+  cursor: pointer;
 }
 #victory-overlay img {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
 }
 #reward-overlay {
@@ -371,7 +372,7 @@ canvas {
 
 #game-title {
   font-family: "Pacifico", cursive;
-  font-size: 64px;
+  font-size: 96px;
   color: #ff1493;
   text-shadow: 3px 3px 0 #fff, 6px 6px 0 #ff69b4;
   margin: 0 0 20px;
