--- a/style.css
+++ b/style.css
@@ -493,6 +493,14 @@ canvas {
   align-items: center;
   justify-content: center;
   z-index: 50;
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity .3s, transform .3s;
+}
+
+#menu-overlay.show {
+  opacity: 1;
+  transform: scale(1);
 }
 
 #game-title {
