--- a/style.css
+++ b/style.css
@@ -78,6 +78,19 @@ html, body {
 .ammo-value {
   display: inline-block;
 }
+#coin-counter {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: #ff1493;
+  margin-top: 4px;
+}
+#coin-counter img {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
 #current-ball {
   position: absolute;
   left: 0;
