--- a/style.css
+++ b/style.css
@@ -146,6 +146,18 @@ html, body {
   padding: 0 3px;
   line-height: 1;
 }
+
+.queue-number {
+  position: absolute;
+  bottom: -6px;
+  left: -6px;
+  background: #fff;
+  color: #000;
+  font-size: 10px;
+  border-radius: 50%;
+  padding: 0 3px;
+  line-height: 1;
+}
 .hp-container {
   display: flex;
   flex-direction: column;
