feat: add noscript and error fallback

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ html, body {
   align-items: center;
   justify-content: flex-start;
 }
+.hidden {
+  display: none;
+}
 #container {
   display: flex;
 }
