--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html, body {
 }
 #container {
   display: flex;
+  height: 700px;
 }
 #game-wrapper {
   position: relative;
@@ -903,11 +904,13 @@ canvas {
   #container {
     flex-direction: column;
     align-items: stretch;
+    height: auto;
   }
 
   #game-wrapper,
   #side-panel {
     width: 100%;
+    height: 700px;
   }
 
   #side-panel {
