--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html, body {
   width: 400px;
   height: 100%;
   background: #fff;
-  border-left: 8px solid #ff69b4;
+  border: 8px solid #ff69b4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -924,8 +924,7 @@ canvas {
   }
 
   #side-panel {
-    border-left: none;
-    border-top: 8px solid #ff69b4;
+    border: 8px solid #ff69b4;
   }
 }
 
